fix: navbar align

--- a/Bonus/css/scarica-style.css
+++ b/Bonus/css/scarica-style.css
@@ -14,6 +14,7 @@
 nav #navbar-inner{
     display: flex;
     justify-content: space-between;
+    align-items: center;
     padding-top: 10px;
     font-size: 0.8em;
 }
